@@ -1,0 +1,9 @@
+Title: printer_pages: add Perf-O-Meter and PNP template
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.5i6
+Date: 1408027731
+Class: feature
+
+
