@@ -49,14 +49,16 @@ def check_canon_pages(item, _no_params, info):
         return (3, "unknown counter type %s" % item)
     for endoid, value in info:
         if endoid == canon_pages_map[item]:
-            return (0, 'Current count: %s' % value, [('count', int(value))])
+            return (0, '%s pages printed' % value, [('count', int(value))])
 
     return (3, 'Item not found in SNMP data')
 
+check_info["canon_pages"] = {
+    'check_function':          check_canon_pages,
+    'inventory_function':      inventory_canon_pages,
+    'service_description':     'Pages %s',
+    'has_perfdata':            True,
+    'snmp_info':               ( ".1.3.6.1.4.1.1602.1.11.1.3.1.4", [ OID_END, "" ]),
+    'snmp_scan_function':      lambda oid: oid(".1.3.6.1.4.1.1602.1.1.1.1.0") != None
+}
 
-check_info['canon_pages'] = (check_canon_pages, "Pages %s", 1, inventory_canon_pages)
-
-snmp_info['canon_pages'] = \
-     ( ".1.3.6.1.4.1.1602.1.11.1.3.1.4", [ OID_END, "" ])
-
-snmp_scan_functions['canon_pages'] = lambda oid: oid(".1.3.6.1.4.1.1602.1.1.1.1.0") != None
